--- a/css/styles.css
+++ b/css/styles.css
@@ -324,6 +324,7 @@ p {
 
 .remera {
     padding: 2rem;
+    text-align: center;
 }
 
 @media (min-width: 768px) {
@@ -331,6 +332,7 @@ p {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         column-gap: 2rem;
+        
     }
 }
 
@@ -344,7 +346,7 @@ p {
     
     border: 1rem solid var(--primarioOscuro);
     background-color: transparent;
-    color: var(--blanco);
+    color: var(--negro);
     font-size: 2rem;
     font-family: Arial, Helvetica, sans-serif;
     padding: 1rem;
@@ -352,6 +354,8 @@ p {
     min-width: 50%;
 
 }
+
+
 
 .formulario__submit {
     background-color: var(--secundario);
